--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>Bharathidasan University  - B.sc</p>
+            <p>Bharathidasan University  - BCA</p>
             
             
         </div>
